<resources>
    <string name="app_name">BuildingTheMonolith</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="squat">Squat</string>
    <string name="percent">%</string>
    <string name="monday">Monday</string>
    <string name="friday">Friday</string>
    <string name="wednesday">Wednesday</string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="weight">Weight</string>
    <string name="ohp">Overhead Press</string>
    <string name="chins">Chins</string>
    <string name="hundred_reps">100 reps</string>
    <string name="face_pulls">Face Pulls/Band Pullaparts</string>
    <string name="dips">Dips</string>
    <string name="hunder_to_two_hundred_reps">100 - 200 reps</string>
    <string name="deadlift">Deadlift</string>
    <string name="bench_press">Bench Press</string>
    <string name="dumbbell_rows">Dumbbell Rows</string>
    <string name="curls">Curls</string>
    <string name="five_sets_of_ten_to_twenty_reps">5 sets of 10-20 reps</string>
    <string name="shrugs">Shrugs</string>
    <string name="five_sets_of_five_reps">5 sets of 5 reps</string>
    <string name="title">Title</string>
    <string name="week_1">Week 1</string>
    <string name="week_2">Week 2</string>
    <string name="week_3">Week 3</string>
    <string name="week_4">Week 4</string>
    <string name="week_5">Week 5</string>
    <string name="week_6">Week 6</string>
</resources>
