<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arjunlalith.buildingthemonolith.Week1MondayFragment">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
                android:text="@string/squat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout"
                android:textSize="20sp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" style="@style/bodyFont"
                android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:text="@string/percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/percentHeader_text"
            style="@style/bodyFont"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView19" android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"/>
        <TextView
            android:text="@string/reps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/repHeader_text"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="16dp"
            android:textAlignment="center" style="@style/bodyFont"
            app:layout_constraintStart_toEndOf="@+id/textView19" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/setHeader_text" android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"/>
        <TextView
            android:text="@string/sets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/setHeader_text"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="16dp" android:textAlignment="center" style="@style/bodyFont"
            app:layout_constraintStart_toEndOf="@+id/repHeader_text"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="4dp"/>
        <TextView
            android:text="40"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/percentWarmup1_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            style="@style/bodyFont"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/percentHeader_text" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/weightWarmup1_text" android:layout_marginEnd="4dp"/>
        <TextView
            android:text="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/percentWarmup2_text"
            style="@style/bodyFont" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/percentWarmup1_text"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/weightWarmup2_text"
            android:layout_marginEnd="4dp"/>
        <TextView
            android:text="60"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/percentWarmup3_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" style="@style/bodyFont"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/weightWarmup3_text"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/percentWarmup2_text"
            android:layout_marginEnd="4dp"/>
        <TextView
            android:text="70"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/percentWarmup3_text"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/bodyFont" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView24" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" android:layout_marginEnd="4dp"/>
        <TextView
            android:text="80"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/bodyFont" android:layout_marginTop="16dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView27"
            android:layout_marginEnd="4dp"/>
        <TextView
            android:text="90"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/bodyFont" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView30"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:layout_marginEnd="4dp"/>
        <TextView
            android:text="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/repWarmup1_text"
            style="@style/bodyFont"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/repHeader_text"
            app:layout_constraintStart_toEndOf="@+id/weightWarmup1_text"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/setWarmup1_text"
            android:layout_marginEnd="4dp" android:layout_marginStart="4dp"/>
        <TextView
            android:text="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/setWarmup1_text"
            style="@style/bodyFont" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/setHeader_text"
            app:layout_constraintStart_toEndOf="@+id/repWarmup1_text" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"/>
        <TextView
            android:text="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/repWarmup2_text"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/repWarmup1_text" style="@style/bodyFont"
            app:layout_constraintStart_toEndOf="@+id/weightWarmup2_text"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/setWarmup2_text"
            android:layout_marginEnd="4dp" android:layout_marginStart="4dp"/>
        <TextView
            android:text="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/setWarmup2_text"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/setWarmup1_text" style="@style/bodyFont"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/repWarmup2_text"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginStart="4dp"/>
        <TextView
            android:text="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/repWarmup3_text"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/repWarmup2_text" style="@style/bodyFont"
            app:layout_constraintStart_toEndOf="@+id/weightWarmup3_text"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/setWarmup3_text"
            android:layout_marginEnd="4dp" android:layout_marginStart="4dp"/>
        <TextView
            android:text="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/setWarmup3_text"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/setWarmup2_text" style="@style/bodyFont"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/repWarmup3_text"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginStart="4dp"/>
        <TextView
            android:text="@string/weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" style="@style/bodyFont"
            app:layout_constraintStart_toEndOf="@+id/percentHeader_text" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/repHeader_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weightWarmup1_text"
            app:layout_constraintStart_toEndOf="@+id/percentWarmup1_text" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/repWarmup1_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19" android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp" style="@style/bodyFont"/>
        <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weightWarmup2_text" style="@style/bodyFont"
            app:layout_constraintStart_toEndOf="@+id/percentWarmup2_text" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/repWarmup2_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/weightWarmup1_text" android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weightWarmup3_text" style="@style/bodyFont"
            app:layout_constraintStart_toEndOf="@+id/percentWarmup3_text" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/repWarmup3_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/weightWarmup2_text" android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"/>
        <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView24"
            app:layout_constraintStart_toEndOf="@+id/textView9" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView25" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/weightWarmup3_text" android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp" style="@style/bodyFont"/>
        <TextView
            android:text="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView25"
            app:layout_constraintStart_toEndOf="@+id/textView24" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView26" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/repWarmup3_text" android:layout_marginEnd="4dp"
            style="@style/bodyFont" android:layout_marginStart="4dp"/>
        <TextView
            android:text="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView26"
            app:layout_constraintStart_toEndOf="@+id/textView25" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/setWarmup3_text" android:layout_marginEnd="8dp"
            style="@style/bodyFont" android:layout_marginStart="4dp"/>
        <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView27"
            app:layout_constraintStart_toEndOf="@+id/textView10" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView28" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView24" style="@style/bodyFont"
            android:layout_marginStart="4dp" android:layout_marginEnd="4dp"/>
        <TextView
            android:text="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView28"
            app:layout_constraintStart_toEndOf="@+id/textView27" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView29" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView25" style="@style/bodyFont"
            android:layout_marginEnd="4dp" android:layout_marginStart="4dp"/>
        <TextView
            android:text="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView29"
            app:layout_constraintStart_toEndOf="@+id/textView28"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView26"
            style="@style/bodyFont" android:layout_marginEnd="8dp" android:layout_marginStart="4dp"/>
        <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView30"
            app:layout_constraintStart_toEndOf="@+id/textView11" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView31" style="@style/bodyFont"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView27" android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <TextView
            android:text="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView31"
            app:layout_constraintStart_toEndOf="@+id/textView30" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView32" style="@style/bodyFont"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView28" android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"/>
        <TextView
            android:text="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView32"
            app:layout_constraintStart_toEndOf="@+id/textView31" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" style="@style/bodyFont" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView29" android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
